# FlexConfig

./: .gitignore  CMakeLIsts-SONiC-202305.txt  CMakeLists.txt  README.md  README.txt  config_reference.json  config_test.json  main.config  main.cpp  run.sh  sample_request.sh  schema.config  schema_reference.json  schema_reference_copy.json  schema_test copy.json  schema_test.json
debian/: changelog  control  flexconfig.install  rules
schema/: root.json
schema/interface/: interface.json
schema/interface/aggregate_ethernet/: aggregate_ethernet.json
schema/interface/ethernet/: ethernet.json
schema/platform/: platform.json
schema/platform/port/: port.json
schema/protocol/: protocol.json
schema/protocol/lacp/: lacp.json
schema/protocol/lldp/: lldp.json
schema/protocol/rstp/: rstp.json
schema/vlan/: vlan.json
src/: config.cpp  config.hpp  connection_management.cpp  connection_management.hpp  constraint_checking.cpp  constraint_checking.hpp  expr_eval.cpp  expr_eval.hpp  load_config.cpp  load_config2.hpp  nodes_ordering.cpp  nodes_ordering.hpp  session_management.cpp  session_management.hpp  value.cpp  value.hpp  webapp.py  xpath.cpp  xpath.hpp
src/lib/: http_common.hpp  multiinherit_shared.hpp  std_types.hpp  topo_sort.cpp  topo_sort.hpp  types.hpp  utils.hpp
src/node/: composite.cpp  composite.hpp  leaf.cpp  leaf.hpp  node.cpp  node.hpp  observer.cpp  observer.hpp  visitor.hpp  visitor_spec.hpp
